--- a/lab5_files/docker-compose.yml
+++ b/lab5_files/docker-compose.yml
@@ -14,3 +14,12 @@ services:
         image: "redis:alpine"
         ports:
             - "6379:6379"
+
+    nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    depends_on:
+      - web
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
